--- a/style.css
+++ b/style.css
@@ -1,3 +1,108 @@
-h1{
-    color: red;
+html {
+  height: 100%;
+  width: 100%;
+}
+
+body{
+  margin: 0;
+  padding: 60px 5px 5px 5px;
+  background-color: #f0f2f4;
+}
+
+.header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: orange;
+  width: 100%;
+  height: 50px;
+}
+
+.header span{
+  color: #ffffff;
+  text-align: center;
+  width: 25%;
+  margin: 0;
+  position: absolute;
+  right: 9px;
+  top: 0;
+  font-size: 16px;
+}
+
+.catchCopy{
+  position: absolute;
+  left: 0;
+  top: -10px;
+  text-align: center;
+  color: #ffffff;
+  padding: 5px;
+  width: 70%;
+  font-weight: bolder;
+  font-size: 20px;
+}
+
+#dateBox{
+  text-align: center;
+  color: #ffffff;
+  width: 25%;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+p{
+  margin: 0;
+}
+
+tr,th,td{
+  border: solid 1px #000000;
+  text-align: center;
+  border-collapse: collapse;
+}
+
+table{
+  width: 100%;
+  margin: 0;
+  border: solid 2px #000000;
+  text-align: center;
+  border-collapse: collapse;
+}
+
+caption{
+  font-size: x-large;
+}
+
+/* 通常の時間割 */
+
+.usualSchedule{
+  margin: 0;
+  margin-bottom: 20px;
+  padding: 0;
+  overflow-x: auto;
+  white-space: nowrap;
+  width: 100%;
+}
+
+.periodBox{
+  width: 100px;
+}
+
+.periodRow{
+  width: 20px;
+}
+
+.subjectRow{
+  width: 80px;
+}
+
+/* 週末課題 */
+
+.weekendHomework{
+  margin: 0;
+  padding: 0;
+  overflow-x: auto;
+  white-space: nowrap;
+  width: 100%;
 }
