--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 html {
   height: 100%;
   width: 100%;
-  background-color: #fffaf4;
+  background-color: #fffbf4;
 }
 
 body{
   margin: 0;
-  background-color: #fffaf4;
+  background-color: #fffbf4;
 }
 
 /* ヘッダー */
@@ -64,7 +64,7 @@ body{
   color: #ffffff;
   margin: 0;
   height: 25px;
-  width: calc(100% / 4);
+  width: calc(100% / 5);
   position: absolute;
   bottom: 0;
 }
@@ -74,15 +74,19 @@ body{
 }
 
 #scheduleTab{
-  left: calc(100% / 4);
+  left: calc(100% / 5);
 }
 
 #EnglishTab{
-  left: calc(100% / 4 * 2);
+  left: calc(100% / 5 * 2);
 }
 
 #classPaperTab{
-  left: calc(100% / 4 * 3);
+  left: calc(100% / 5 * 3);
+}
+
+#mailaddressTab{
+  left: calc(100% / 5 * 4);
 }
 
 .tab-link.active {
@@ -110,19 +114,20 @@ body{
   padding: 5px;
   height: 100%;
   z-index: 1;
-  background-color: #fffaf4;
+  background-color: #fffbf4;
 }
 
 /* ホーム */
 
 .homeTitle{
   margin: -5px -5px 0 -5px;
-  background-color: #f4efe9;
+  background-color: #f4efe8;
   color: #565656;
   font-size: x-large;
   padding: 5px;
   text-align: center;
   font-weight: bold;
+  height: 30px;
 }
 
 /* テーブルなど諸設定 */
@@ -147,12 +152,12 @@ th{
 
 table{
   width: 100%;
-  margin: 0;
+  margin: 0 0 10px 0;
   border: solid 2px #565656;
   text-align: center;
   border-collapse: collapse;
   color: #707070;
-  background-color: #fffaf4;
+  background-color: #fffbf4;
 }
 
 caption{
@@ -184,14 +189,14 @@ caption{
 .newsBox{
   width: calc(100% - 15px);
   height: auto;
-  border: 3px solid #736356;
+  border: 3px solid #736357;
   padding: 5px;
-  margin: 0;
+  margin: 0 0 10px 0;
 }
 
 .newsBoxTitle{
   margin: -5px 0 0 -5px;
-  background-color: #736356;
+  background-color: #736357;
   width: calc(100% + 10px);
   height: 30px;
   font-size: 20px;
@@ -199,4 +204,43 @@ caption{
   text-align: center;
 }
 
-/* バス時刻表 */
+/* メニュー */
+.menu{
+  display: block;
+  width: calc(100% - 14px);
+  height: auto;
+  border: 2px solid #736357;
+  padding: 5px;
+  margin: 10px 0 0 0;
+  border-radius: 10px;
+  background-color: #f4efe8;
+}
+
+.menuTitle{
+  margin: 0 0 0 5px;
+  width: 100%;
+  height: 30px;
+  font-size: 20px;
+  color: #707070;
+}
+
+.menu ul,li{
+  margin: 3px;
+  font-size: 16px;
+}
+
+.menu li{
+  border-bottom: 1px #707070 dashed;
+  padding-bottom: 5px;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.menu li:hover{
+  color: #9c9c9c;
+}
+
+.menu a{
+  text-decoration: none;
+  color: #707070;
+}
