--- a/style.css
+++ b/style.css
@@ -266,6 +266,7 @@ caption{
 .button{
   width: 180px;
   height: 30px;
+  font-size: 18px;
   text-decoration: none;
   text-align: center;
   color: #ffffff;
